# npu-lab

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  README.ru.md
android-app/: .gitignore  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  binary_info_walk.h  qnn_jni.cpp  qnn_runtime.cpp  qnn_runtime.h
android-app/app/src/main/cpp/qnn_stubs/: QnnInterface.h
android-app/app/src/main/java/io/melan/npulab/: MainActivity.kt  NpuLabApplication.kt
android-app/app/src/main/java/io/melan/npulab/account/: AccountStore.kt  AiHubAccount.kt  AiHubClient.kt
android-app/app/src/main/java/io/melan/npulab/audio/: AudioRecorder.kt  Fp16.kt  LogMelFrontend.kt
android-app/app/src/main/java/io/melan/npulab/benchmark/: BenchmarkRunner.kt
android-app/app/src/main/java/io/melan/npulab/device/: DeviceInfo.kt
android-app/app/src/main/java/io/melan/npulab/inference/: ModelCatalog.kt  NpuLabNative.kt  OnDeviceCompiler.kt  OrtNpuRunner.kt  QnnRuntime.kt  QnnRuntimeLibs.kt  StableDiffusionPipeline.kt  WhisperPipeline.kt  WhisperVariant.kt
android-app/app/src/main/java/io/melan/npulab/install/: ModelImporter.kt  ModelInstaller.kt
android-app/app/src/main/java/io/melan/npulab/scheduler/: DpmSolver.kt  EulerSolver.kt
android-app/app/src/main/java/io/melan/npulab/tokenizer/: ClipTokenizer.kt  WhisperTokenizer.kt
android-app/app/src/main/java/io/melan/npulab/vision/: ImageOps.kt  TensorIo.kt  VisionPipeline.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/resources/binmeta/: sd15_text_encoder.json  sd15_unet.json  sd15_vae_decoder.json  whisper_decoder.json  whisper_encoder.json
android-app/app/src/test/resources/tokenizer/: fixtures.json
android-app/app/src/test/resources/whisper/: decode_fixtures.json  logmel128_expected.f32  logmel_expected.f32  pcm_3s.f32
docs/: 00-readme.md  01-npu-basics.md  02-snapdragon-hexagon.md  03-checking-npu.md  04-qnn-sdk-setup.md  05-using-ai-hub.md  06-coding-npu.md  07-benchmarking.md  08-alternative-onnx.md  09-troubleshooting.md  10-custom-models.md  11-vision-models.md
scripts/: benchmark-pc.py  compile-model.py  copy-qnn-libs.sh  extract-sd-component.py  fetch-models.py  inspect-model.py  requirements.txt  run-host-introspect-test.sh  setup-android-sdk.sh
tools/host_introspect/: CMakeLists.txt  main.cpp
(+35 files in other folders)
